--- a/public/stat120/Day14.Rmd
+++ b/public/stat120/Day14.Rmd
@@ -1,16 +1,16 @@
 ---
-title: "The Normal Distribution!"
+title: "Additional topics in testing"
 subtitle: "<br/> STAT 120"
 author: "Bastola"
 date: "`r format(Sys.Date(), ' %B %d %Y')`"
 output:
   xaringan::moon_reader:
-    css: ["default", css/xaringan-themer-solns.css, css/my-theme.css, css/my-font.css]
+    css: ["default", css/xaringan-themer-solns.css, css/my-font.css]
     lib_dir: libs
     chakra: libs/remark-latest.min.js
     seal: false
     nature:
-      highlightStyle: googlecode  #http://arm.rbind.io/slides/xaringan.html#77 # idea, magula, googlecode, default
+      highlightStyle: magula  #http://arm.rbind.io/slides/xaringan.html#77 # idea, magula, googlecode, default
       highlightLines: true
       highlightLanguage: ["r", "css", "yaml"]
       countIncrementalSlides: true
@@ -38,8 +38,7 @@ knitr::opts_chunk$set(echo = TRUE,
                       message = FALSE,
                       fig.height = 3, 
                       fig.width = 4,
-                      out.width = "100%",
-                      fig.align = "center"
+                      out.width = "100%"
                       )
 
 
@@ -75,6 +74,7 @@ yt <- 0
 
 
 ```{r xaringanExtra-clipboard, echo=FALSE}
+# Icon for your turn
 htmltools::tagList(
   xaringanExtra::use_clipboard(
     button_text = "<i class=\"fa fa-clipboard\"></i>",
@@ -94,11 +94,11 @@ layout: true
 ---
 
 class: title-slide, middle
-<!-- background-image: url("assets/title-image2.jpg") -->
+<!-- background-image: url("images/title-image2.png") -->
 background-position: 10% 90%, 100% 50%
 background-size: 160px, 100% 100%
 
-# .fancy[The Normal Distribution!]
+# .fancy[Additional topics in testing]
 
 ### .fancy[Stat 120]
 
@@ -109,247 +109,439 @@ background-size: 160px, 100% 100%
 
 class: middle
 
-# Density Curve
+# Significance Level $\&$ Formal  Decisions
 
-> A density curve is a theoretical model to describe a distribution.
+.bql[The .bold[significance level], $\alpha$ is  the threshold below which the p-value is deemed small enough to reject the null hypothesis (evidence is statistically significant).
+]
+
+$$ \mathrm{p} \text {-value }<\alpha \quad \Longrightarrow \quad \text { Reject } \mathrm{H}_0 $$
+$$\mathrm{p} \text {-value } \geq \alpha \quad \Longrightarrow \text { Do not Reject } \mathrm{H}_0$$
+Common levels:
+.bq[
+- $10 \%$ : need some evidence to reject the null
+- $5 \%$ : need moderate evidence to reject the null
+- $1 \%$ : need strong evidence to reject the null
+]
+
+---
+
+# Errors
+
+
+|  | Reject $H_0$ | Do not reject $H_0$ |
+| :--- | :--- | :--- |
+| $H_0$ true | .red.bold[TYPE I ERROR] | <p style="text-align: center;">&#128516;</p> |
+| $H_0$ false | <p style="text-align: center;">&#128516;</p> | .red.bold[TYPE II ERROR] |
 
 <br>
 
 .bq[
-Distribution for 
-- individual measurements in population (for a quantitative variable)
-- Sampling distribution for a statistic
-]
-
-.bq[
-All density curves have an area under the curve of 1 (100%)
-- give proportions/percents as areas under the curve
+- A Type I Error is rejecting a true null (false positive)
+- A Type II Error is not rejecting a false null (false negative)
 ]
 
 ---
 
-# Normal Distribution
+class: middle
 
-.bq[A normal distribution has a symmetric bell-shaped density curve.]
+# Statistical Significance
 
-```{r, echo=FALSE, out.width="50%"}
-ggplot(data = data.frame(x = c(-4, 4)), aes(x)) + 
-  stat_function(fun = dnorm, args = list(mean = 0, sd = 1)) +
-  labs(title = "Standard Normal Curve") +
-  xlab("") + ylab("") + 
-  theme(plot.title = element_text(hjust = 0.5))
-```
-
-
----
-
-# The Normal Model: $X \sim N(\mu, \sigma)$
-
-.bq[The mean and SD determine how a normal density curve looks.
-The normal model parameters are
-- $\mu$ = model mean (center)
-- $\sigma=$ model SD (variability)
-]
-
-<br>
-
-<center>
-<img src="images/day14-1.png" width="50%" height="50%"> <br>
-</center>
-
----
-
-# What proportion of people score above 650?
-
-```{r, echo=FALSE, out.width="70%"}
-x <- seq(from = 300, to = 900, by = 0.1)
-y <- dnorm(x, mean = 580, sd = 70)
-ggplot(data = data.frame(x, y), aes(x = x, y = y)) +
-  geom_line(color = "blue") +
-  geom_polygon(data = data.frame(x = c(650, x[x >= 650], 650), y = c(0, y[x >= 650], 0)),
-              aes(x = x, y = y), fill = "red", alpha = 0.5) +
-  theme(axis.title.y = element_blank(),
-        axis.text.y = element_blank(),
-        axis.ticks.y = element_blank())
-```
-
-
-<center>
-<div style="position: absolute; top: 20%; left: 70%;">
-<span style="content: '\2192'; font-size: 20px; color: #FF00FF; text-align: center; white-space: pre-line;">
-  <p>Area under the curve <br> for scores 650 & higher</p>
-</span>
-</div>
-</center>
-
----
-
-# How can we find areas under a normal density?
-
-
-```{r, echo=FALSE, out.width="50%"}
-x <- seq(from = 300, to = 900, by = 0.1)
-y <- dnorm(x, mean = 580, sd = 70)
-ggplot(data = data.frame(x, y), aes(x = x, y = y)) +
-  geom_line(color = "blue") +
-  geom_polygon(data = data.frame(x = c(500, x[x >= 500 & x <= 700], 700), y = c(0, y[x >= 500 & x <= 700], 0)),
-              aes(x = x, y = y), fill = "#346B5A", alpha = 0.5) +
-  theme(axis.title.y = element_blank(),
-        axis.text.y = element_blank(),
-        axis.ticks.y = element_blank(),
-        axis.text.x = element_blank(),
-        axis.ticks.x = element_blank(),
-        axis.title.x = element_blank()) +
-  annotate("text", x = 500, y = -0.0001, label = "a") +
-  annotate("text", x = 700, y = -0.0001, label = "b")
-```
-
-
-
+Hypothesis testing is similar to how our justice system works (or is supposed to work!).
 \begin{align*}
-\text { Area }=\int_a^b \frac{1}{\sqrt{2 \pi} \sigma} e^{-\frac{(x-\mu)^2}{2 \sigma^2}} d x
+H_0 & \text { : defendant is innocent }  \\ H_A & \text { : defendant is guilty }
 \end{align*}
 
----
+Assumption: Defendant is innocent $(H_0)$
 
-# StatKey – Verbal SAT population 
+.bq.font80[
+.bold[Verdicts:]
 
-<center>
-<img src="images/day14-2.png" width="70%" height="50%"> <br>
-</center>
+Guilty: evidence (data) "beyond a reasonable doubt" points to guilt (Statistically significant)
+- Type I error possible: convict an innocent person
 
----
-
-# StatKey – Verbal SAT population
-
-<center>
-<img src="images/day14-3.png" width="50%" height="50%"> <br>
-</center>
+Not Guilty: evidence (data) not beyond a reasonable doubt, but we don't know if they are truly innocent $\left(H_0\right)$
+- Type II error possible: release a guilty person
+]
 
 ---
 
-```{r, echo=FALSE, out.width="70%"}
-library(gridExtra)
-x <- seq(from = 300, to = 900, by = 0.1)
-y <- dnorm(x, mean = 580, sd = 70)
-p1 <- ggplot(data = data.frame(x, y), aes(x = x, y = y)) +
-  geom_line(color = "blue") +
-  geom_polygon(data = data.frame(x = c(510, x[x >= 510 & x <= 650], 650), y = c(0, y[x >= 510 & x <= 650], 0)),
-              aes(x = x, y = y), fill = "maroon", alpha = 0.5) +
-  theme(axis.title.y = element_blank(),
-        axis.text.y = element_blank(),
-        axis.ticks.y = element_blank(),
-        axis.title.x = element_blank(),
-        axis.text.x = element_text(size = 5)) +
-    scale_x_continuous(breaks = seq(300, 900, by = 50)) 
- 
+class: middle
 
-x <- seq(from = 0, to = 1, by = 0.01)
-y <- dnorm(x, mean = 0.5, sd = 0.1)
-p2 <- ggplot(data = data.frame(x, y), aes(x = x, y = y)) +
-  geom_line(color = "blue") +
-  geom_polygon(data = data.frame(x = c(0.4, x[x >= 0.4 & x <= 0.6], 0.6), y = c(0, y[x >= 0.4 & x <= 0.6], 0)),
-              aes(x = x, y = y), fill = "maroon", alpha = 0.5) +
-    theme(axis.title.y = element_blank(),
-        axis.text.y = element_blank(),
-        axis.ticks.y = element_blank(),
-        axis.title.x = element_blank(),
-        axis.text.x = element_text(size = 6)) +
-    scale_x_continuous(breaks = seq(0, 1, by = 0.1)) 
- 
+# Examples
 
+.bq.font80[
+Science study of gender stereotypes:
+- Comparing interest between 5-year-old boys and girls in a game for "really, really smart kids"
+- test using $\alpha=0.05$; reported $p$-value of $0.46$
 
+Decision?
+- Do not reject $\mathrm{H}_0$ : no evidence of a difference in mean interest level
 
-x <- seq(from = 25, to = 32, by = 0.1)
-y <- dnorm(x, mean = 29.1, sd = 0.9)
-p3 <- ggplot(data = data.frame(x, y), aes(x = x, y = y)) +
-  geom_line(color = "blue") +
-  geom_polygon(data = data.frame(x = c(28.2, x[x >= 28.2 & x <= 30], 30), y = c(0, y[x >= 28.2 & x <= 30], 0)),
-              aes(x = x, y = y), fill = "maroon", alpha = 0.5) +
-    theme(axis.title.y = element_blank(),
-        axis.text.y = element_blank(),
-        axis.ticks.y = element_blank(),
-        axis.title.x = element_blank(),
-        axis.text.x = element_text(size = 6)) +
-    scale_x_continuous(breaks = seq(25.4, 31.9, by = 0.9)) 
- 
+Possible error?
+- Type II: if a difference in mean interest level exists, then we would have made an error when not finding evidence of a gender difference in interest levels.
 
-
-
-
-x <- seq(from = -25, to = 26, by = 1)
-y <- dnorm(x, mean = 0, sd = 5)
-p4 <- ggplot(data = data.frame(x, y), aes(x = x, y = y)) +
-  geom_line(color = "blue") +
-  geom_polygon(data = data.frame(x = c(-5, x[x >= -5 & x <= 5], 5), y = c(0, y[x >= -5 & x <= 5], 0)),
-              aes(x = x, y = y), fill = "maroon", alpha = 0.5) +
-   theme(axis.title.y = element_blank(),
-        axis.text.y = element_blank(),
-        axis.ticks.y = element_blank(),
-        axis.title.x = element_blank(),
-        axis.text.x = element_text(size = 6)) +
-    scale_x_continuous(breaks = seq(-24, 24, by = 4)) 
- 
-
-
-grid.arrange(p1, p2, p3, p4, ncol = 2)
-
-```
-
----
-
-# Connecting any Normal model to the standard normal model
-
-```{r, echo=FALSE, out.width="680%", fig.width=7}
-x <- seq(from = 300, to = 900, by = 0.1)
-y <- dnorm(x, mean = 580, sd = 70)
-p1 <- ggplot(data = data.frame(x, y), aes(x = x, y = y)) +
-  geom_line(color = "blue") +
-  geom_polygon(data = data.frame(x = c(300, x[x <= 440], 440), y = c(0, y[x <= 440], 0)),
-              aes(x = x, y = y), fill = "red", alpha = 0.5) +
-  theme(axis.title.y = element_blank(),
-        axis.text.y = element_blank(),
-        axis.ticks.y = element_blank(),
-                axis.text.x = element_text(size = 5)) +
-  scale_x_continuous(breaks = seq(340, 870, by = 50)) +
-   labs(x = "X")
-
-
-x <- (x - 580)/70
-y <- dnorm(x)
-
-p2 <-  ggplot(data = data.frame(x, y), aes(x = x, y = y)) +
-  geom_line(color = "blue") +
-  geom_polygon(data = data.frame(x = c(-4, x[x <= -2], -2), y = c(0, y[x <= -2], 0)),
-              aes(x = x, y = y), fill = "red", alpha = 0.5) +
-  theme(axis.title.y = element_blank(),
-        axis.text.y = element_blank(),
-        axis.ticks.y = element_blank(),
-                axis.text.x = element_text(size = 5)) +
-  scale_x_continuous(breaks = seq(-4, 4, by = 1)) +
-  labs(x = "Z")
-
-
-
-grid.arrange(p1, p2, ncol = 2)
-
-
-```
+Consequence of making this error?
+- Mislead the public about when gender stereotypes start emerging in young children
+]
 
 
 ---
 
-# Big question
+class: middle
+
+# Examples
 
 .bq[
-When have we already been using normal models??
-- Bootstrap distributions – get confidence intervals if a bootstrap distribution is roughly bell-shaped
-- Randomization distributions – many of these are bell-shaped. 
+Memory: test using $\alpha=0.05$; data gives $p$-value of $0.048$
 
-- Normal models play a huge role in statistical inference.
+Decision?
+- Reject $\mathrm{H}_0$
 
-- If we know the (bootstrap/randomization) standard error* then we can just use a normal model rather than a resampling model (which requires more computational effort)
+Possible error?
+- Type I: if there is no difference in treatments, then we would have made an error in claiming that there was.
+
+Consequences of making this error?
+- Mislead the public about the benefits of sleep over caffeine.
+- The nice thing about type I errors is that we can control the chance of such an error...
 ]
+
+---
+
+class: middle
+
+#  $\alpha=$ Probability of Type I Error
+
+.out-t[
+The significance level $\alpha$ controls the type I error rate.
+]
+
+.pull-left[
+
+.bq.font80[
+- Recall the Florida Lakes slope test: $$\mathrm{H}_0: \beta=0 \quad \mathrm{H}_{\mathrm{a}}: \beta<0$$
+
+- If $\mathrm{H}_0$ is true and $\alpha=0.05$, then $5 \%$ of sample slopes will be lower red tail $(b \leq 0.06)$.
+
+- $5 \%$ of the sample slopes will give $p$-values less than $0.05$, so $5 \%$ of statistics will lead to rejecting $\mathrm{H}_0$ if it is true (Type I error)!!!
+
+]
+]
+
+
+.pull-right[
+
+<center>
+<img src="images/day13-1.png" width="90%" height="90%"> <br>
+<a>Null distribution</a>
+</center>
+
+]
+
+---
+
+class: middle
+
+#  $\alpha=$ Probability of Type I Error
+
+.out-t[
+The significance level $\alpha$ controls the type I error rate.
+]
+
+.pull-left[
+
+.bq.font80[
+- Recall the Florida Lakes slope test: $$\mathrm{H}_0: \beta=0 \quad \mathrm{H}_{\mathrm{a}}: \beta<0$$
+
+- If $\mathrm{H}_0$ is true and $\alpha=0.05$, then $5 \%$ of sample slopes will be lower red tail $(b \leq 0.06)$.
+
+- $5 \%$ of the sample slopes will give $p$-values less than $0.05$, so $5 \%$ of statistics will lead to rejecting $\mathrm{H}_0$ if it is true (Type I error)!!!
+
+]
+]
+
+
+.pull-right[
+
+<center>
+<img src="images/day13-1.png" width="90%" height="90%"> <br>
+<div style="position: absolute; top: 50%; left: 50%;">
+<span style="content: '\2192'; font-size: 20px; color: #920; text-align: center; white-space: pre-line;">
+  <p>Any b here will <br> mean we reject <br> null</p>
+   <i class="gg-arrow-long-right"></i>
+</span>
+</div>
+<a>Null distribution</a>
+</center>
+
+]
+
+---
+
+class: middle
+
+# Selecting a significance level
+
+.bq[
+Decreasing $\alpha$ will lower your Type I error rate (makes it harder to reject the null)
+  - but it will also increase your type II error rate (makes it harder to accept a true alternative)
+]
+
+---
+
+class: middle
+
+# Selecting a significance level
+
+
+.bq[
+If a Type I error (rejecting a true null) is much worse than a Type II error, we may choose a smaller $\alpha$, like $\alpha=0.01$ (need lots of evidence to reject null).
+  - E.g. sending an innocent person to jail
+  ]
+  
+---
+
+class: middle
+
+# Selecting a significance level
+
+.bq[
+If a Type II error (not rejecting a false null) is much worse than a Type I error, we may choose a larger $\alpha$, like $\alpha=0.10$
+- E.g. a false negative test for a serious disease
+]
+
+
+
+---
+
+class: middle
+
+# Probability of Type II Error
+
+.bq.font80[
+Not as simple to compute since the alternative is assumed to be true
+- E.g. which value in $\mathrm{H}_{\mathrm{a}}: \beta<0$ do we select to create an "alternative" randomization distribution?]
+<br>
+.bq.font80[
+The probability of making a Type II Error (not rejecting a false null) depends on
+- Effect size (how far the truth is from the null)
+- Sample size (bigger $\mathrm{n}$ means less uncertainty)
+- Variability of measurements
+- Significance level (bigger $\alpha$ means more false positives but fewer false negatives)]
+
+
+
+---
+
+class: middle
+
+# Power of a test
+
+.bql[
+The power of a test is the chance that it will correctly reject the null, or
+$$1 - \text{Prob(Type II error)}$$
+]
+
+
+---
+
+# Statistical Conclusions
+
+Formal decision of hypothesis test, based on a = 0.05 :
+
+<center>
+<img src="images/day13-2.png" width="100%" height="30%"> <br>
+</center>
+
+
+
+Informal strength of evidence against H0:
+
+
+<center>
+<img src="images/day13-3.png" width="100%" height="30%"> <br>
+</center>
+
+---
+
+class: middle
+
+# Strength of evidence
+
+.bql[
+
+- Smaller p-values give us stronger and stronger evidence for the alternative hypothesis.
+
+- Larger p-values indicate little evidence for the alternative hypothesis. 
+
+]
+
+
+---
+
+# Example: bootstrap or randomization?
+
+<center>
+<img src="images/day13-4.png" width="60%" height="30%"> <br>
+</center>
+
+---
+
+# Example: bootstrap or randomization?
+
+<center>
+<img src="images/day13-5.png" width="60%" height="30%"> <br>
+</center>
+
+---
+
+class: middle
+
+# Using confidence intervals for hypothesis testing
+
+.bq.font110[
+If a $95 \%$ CI contains the parameter in $\mathrm{H}_0$, then a two-tailed test should not reject $\mathrm{H}_0$ at a $5 \%$ significance level.
+]
+
+<br>
+
+.bq.font110[
+If a $95 \%$ CI misses the parameter in $\mathrm{H}_0$, then a two-tailed test should reject $\mathrm{H}_0$ at a $5 \%$ significance level.
+]
+
+---
+
+<center>
+<img src="images/day13-6.png" width="60%" height="30%"> <br>
+</center>
+
+.bq[The 95% confidence interval misses null difference of 0. Reject the null at 5% level]
+
+
+---
+
+<center>
+<img src="images/day13-7.png" width="60%" height="30%"> <br>
+</center>
+
+
+.bq[The 99% confidence interval contains null difference of 0. Do not reject the null at 1% level]
+
+---
+
+class: middle
+
+# Sample Size and Statistical Significance
+
+.bql[
+- With small sample sizes, even large differences or effects may not be significant.
+- With large sample sizes, even a very small difference or effect can be significant
+]
+
+---
+
+# Randomization distribution with $n=10$
+
+<center>
+<img src="images/day13-8.png" width="60%" height="30%"> <br>
+</center>
+
+
+---
+
+# Randomization distribution with $n=100$
+
+
+<center>
+<img src="images/day13-9.png" width="60%" height="30%"> <br>
+</center>
+
+---
+
+class: middle
+
+# Multiple Testing/Comparison
+
+
+.bql[
+When multiple hypothesis tests are conducted, the chance that at least one test incorrectly rejects a true null hypothesis increases with the number of tests.
+
+- If the null hypotheses are all true, $\alpha$ of the tests will yield statistically significant results just by random chance.
+]
+
+---
+
+class: middle
+
+# Diet and Sex of Baby
+
+
+.bq[
+- Are certain foods in your diet associated with whether or not you conceive a boy or a girl? 
+- To study this, researchers asked women about their eating habits, including asking whether or not they ate 133 different foods regularly
+]
+
+
+.footnote[http://www.newscientist.com/article/dn13754-breakfast-cereals-boost-chances-of-conceiving-boys.html]
+
+---
+
+class: middle
+
+# Diet and Sex of Baby
+
+.hljs[For each of the 133 foods studied, a hypothesis test was conducted for a difference between mothers who conceived boys and girls in the proportion who consume each food]
+
+
+.bq[What are the null and alternative hypotheses?
+
+Compare two populations: mothers who have boys vs. mothers who have girls
+
+$\boldsymbol{p}_b$ : proportion of mothers who have boys that consume the food regularly
+
+$\boldsymbol{p}_g$ : proportion of mothers who have girls that consume the food regularly
+]
+
+\begin{aligned}
+& \mathrm{H}_0: p_b=p_g \\
+& \mathrm{H}_a: p_b \neq p_g
+\end{aligned}
+
+---
+
+class: middle
+
+# Diet and Sex of Baby
+
+A significant difference was found for breakfast cereal (mothers of boys eat more), prompting the headline
+
+.green-h.center[“Breakfast Cereal Boosts Chances of 	Conceiving Boys”]
+
+How might you explain this?
+
+.bq[Random chance; several tests (about 6 or 7) are going to be significant, even if no differences exist]
+
+---
+
+class: middle
+
+# Diet and Sex of Baby
+
+> If there are NO differences (all 133 null hypotheses are true), about how many significant differences would be found using α = 0.05?
+
+$$133 \pm 0.05 = 6.65$$
+.bq[Expect about 6-7 statistically significant foods even if the rate of food consumption is equal for women who have boys and women who have girls]
+
+
+---
+
+class: middle
+
+# Multiple Comparisons
+
+.bq[The most important thing is to be aware of this issue, and not to trust claims that are obviously one of many tests (unless they specifically mention an adjustment for multiple testing)]
+
+.bq[There are ways to account for this (e.g. Bonferroni’s Correction), but these are beyond the scope of this class]
+
 
 
 ---
@@ -361,22 +553,18 @@ class: action
 .pull-left-40[
 ![](https://media.giphy.com/media/RKApDdwsQ6jkwd6RNn/giphy.gif)
 ]
-.pull-right-60[
+
 <br>
-.bq[
 
-Randomly choose a letter from A B C D E and write it down (don’t show anyone!)
 
-Find a partner, telepathically communicate your letter (no auditory or visual clues!) and have them guess your
-letter.
+.pull-right[
+<br>
+<br>
+<br>
 
-Repeat a couple of times then switch roles.
-
+> Please go over the class activity for today and let me know if you have any questions.
 
 ]
 
-.out-t[How often did you guess correctly?]
-]
-
-`r countdown(minutes = 5, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
+`r countdown(minutes = 10, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
 
